Fixes #51 - ensure Settings menu is full-width on iOS
This was previously not respecting the overrides for mobile we were using.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -319,11 +319,16 @@ span.control:hover {
   .App__homelink {
     display: none;
   }
+
+  /* Safari only fix to ensure Settings menu is full width */
+  _::-webkit-:not(:root:root), .Settings {
+    width: 100%;
+  }
 }
 
 /* Hide the Settings link on iPhone 5 */
 @media (device-height: 568px) and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {
   .App__settings {
     display: none;
-  } 
+  }
 }
